@@ -4,6 +4,9 @@ main-menu (0.073) UNRELEASED; urgency=low
     - Check for availability of debian-installer/language.
   * Christian Perrier
     - Rename templates file to main-menu.templates
+  * Joey Hess
+    - Remove the EXIT_QUIT and EXIT_RESTART return code handling
+      as that is no longer used. Closes: #258877
 
  -- Christian Perrier <bubulle@debian.org>  Wed, 18 Aug 2004 10:01:17 +0200
 
